# rust_template

./: Cargo.toml  README.md
src/: lib.rs  mod1.rs
src/mod3/: bar.rs  foo.rs  mod.rs
tests/: some-integration-tests.rs
tests/multi-file-test/: main.rs
