
[package]
name = "rust_template"
version = "0.1.0"
authors = ["whl36512 <whl36512@gmail.com>"]
edition = "2018"

[dependencies]
log = "*"
env_logger = "*"

[profile.release]
opt-level = 'z'     # Optimize for size.
lto = true          # Enable Link Time Optimization
codegen-units = 1   # Reduce number of codegen units to increase optimizations.
panic = 'abort'     # Abort on panic

